# locked-in-lfg

./: .easignore  .env.example  .gitignore  Anchor.toml  App.tsx  README.md  index.js
.claude/: CLAUDE.md
.firecrawl/: solana-pda.md  solanamobile-signmessages.json  tweetnacl-readme.md  tweetnacl-verify.json
.next/: trace  trace-build
backend/: .env.example  README.md  package-lock.json  package.json
backend/openapi/: lesson-api-v1.yaml
backend/sql/: 0001_lesson_platform.sql  0002_seed_dev_release.sql  0008_verified_completion_publish_status.sql  0009_runtime_receipt_publish_status.sql  0010_harvest_result_receipts.sql  0011_harvest_result_community_pot_publish_status.sql  0012_community_pot_distribution_snapshots.sql  0014_answer_validation_decisions.sql  (+7 more)
config/: CLAUDE.md
docs/: 00-technical-architecture-v3.md  01-wallet-connection.md  02-lesson-api.md  03-fuel.md  04-tokenomics.md  05-yield-calculator.md  06-vault-contract.md  07-deposit-locking-service.md  08-timer-yield-product.md  09-leaderboard.md  10-answer-validator.md
programs/community_pot/: Cargo.toml
programs/community_pot/src/: lib.rs
programs/lock_vault/: Cargo.toml
programs/lock_vault/src/: lib.rs
scripts/: fund-community-pot-vault.mjs  fund-redemption-vault.mjs  init-community-pot-protocol.mjs  init-lock-vault-protocol.mjs  inspect-community-pot.mjs  inspect-lock-vault.mjs  publish-rich-starter-lessons.mjs  sync-lock-vault-course-policies.mjs  upsert-lock-vault-course-policy.mjs
src/: theme.tsx
web-app/: next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json
(+150 files in other folders)
