[package]
name = "community-pot"
version = "0.1.0"
description = "CommunityPot accumulator program for Locked In v3"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "community_pot"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["associated_token"] }
