[package]
name = "lock-vault"
version = "0.1.0"
description = "LockVault program scaffold for Locked In v3"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lock_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["associated_token"] }
